Fix resume header alignment.

--- a/site/web/app/themes/brandonrp/assets/styles/pages/_resume.scss
+++ b/site/web/app/themes/brandonrp/assets/styles/pages/_resume.scss
@@ -106,6 +106,13 @@
   .entry-title {
     font-size: ms(3);
     padding: 0;
+  }
+
+  .page-header {
+    margin: ms(2) 0;
+  }
+
+  .entry-title {
     margin: ms(2) auto;
   }
 }
